welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tab
	for ( k <- 0 to (tab.length-1 ) )  {
                         ^