welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for ( k <- 0 to (tab.length-1 ) )  {
		if (lookingfor) {
			return T(length -1 ) 
		} else return -1

		
		
	}
	}
